--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | ChessTG</title>
+    <title>Unity Web Player | Test-Tranport-Mathcmaking</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="manifest" href="manifest.webmanifest">
@@ -57,16 +57,16 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/01f2e857705f878ddc39a446834fc91c.loader.js";
+      var loaderUrl = buildUrl + "/4cb301595557292ac1ad7acde655c99b.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/57ed3118d6ce74735f7aee271109a0c7.data",
-        frameworkUrl: buildUrl + "/308406784c524d0921b9744784766ef5.framework.js",
-        codeUrl: buildUrl + "/2b7ed57c62fe61abe49817100f68875f.wasm",
+        dataUrl: buildUrl + "/3322575b575c451b721e12f941ca6ef1.data",
+        frameworkUrl: buildUrl + "/d9161dab8da1f4dfeb113ff4f1ca491b.framework.js",
+        codeUrl: buildUrl + "/ce2d62e6c89be450f1185024ee713840.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "ChessTG",
-        productVersion: "1.0",
+        productName: "Test-Tranport-Mathcmaking",
+        productVersion: "0.1.0",
         showBanner: unityShowBanner,
       };
 
